--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,151 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-image: url(../images/cover-image-light.png);
+  --main-font: 'IBM Plex mono', monospace, sans-serif;
+  --bg-color: #FF8DCB;
+  --text-color: #353430;
+  --accent-color: #353430;
+  --h1-color: #FFC2E6;
+  --main-size: 18px;
+  --bold: 700;
+  --normal: 400;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    /* Дублируем переменные светлой темы */ 
+    --background-image: url(../images/cover-image-light.png);
+    --main-font: 'IBM Plex mono', monospace, sans-serif;
+    --bg-color: #FF8DCB;
+    --text-color: #353430;
+    --accent-color: #353430;
+    --h1-color: #FFC2E6;
+    --main-size: 18px;
+    --bold: 700;
+    --normal: 400;
+  }
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  background-image: var(--background-image);
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  display: grid;
+}
+
+.theme-light .decorated-zone::before {
+  bottom: 10px;
+  left: 10px;
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
+}
+
+.theme-light .decorated-zone::after {
+  top: 10px;
+  right: 10px;
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
+}
+
+@media (376px < width <= 768px ) {
+  .theme-light .content-section {
+    padding: 20px;
+  }
+
+  .theme-light .decorated-zone::before {
+    bottom: 20px;
+    left: 20px;
+    border-bottom: 1px solid var(--accent-color);
+    border-left: 1px solid var(--accent-color);
+  }
+  
+  .theme-light .decorated-zone::after {
+    top: 20px;
+    right: 20px;
+    border-top: 1px solid var(--accent-color);
+    border-right: 1px solid var(--accent-color);
+  }
+
+  .theme-light .header {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr min-content 1fr;
+    padding-inline-start: 0;
+  }
+}
+
+@media (768px < width <= 1024px ) {
+  .theme-light .content-section {
+    padding: 20px;
+  }
+
+  .theme-light .decorated-zone::before {
+    bottom: 20px;
+    left: 20px;
+    border-bottom: 1px solid var(--accent-color);
+    border-left: 1px solid var(--accent-color);
+  }
+  
+  .theme-light .decorated-zone::after {
+    top: 20px;
+    right: 20px;
+    border-top: 1px solid var(--accent-color);
+    border-right: 1px solid var(--accent-color);
+  }
+
+  .theme-light .header {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr min-content 1fr;
+    padding-inline-start: 0;
+  }
+}
+
+.theme-light .header__theme-menu {
+  font-family: var(--main-font);
+  color: var(--accent-color);
+  font-size: var(--main-size);
+}
+
+.theme-light .section__title {
+  color: var(--accent-color);
+  font-size: var(--main-size);
+  font-weight: var(--bold);
+  line-height: 130%;
+}
+
+.theme-light .card__text {
+  color: var(--accent-color);
+}
+
+.theme-light .header__check::before {
+  content: 'rec';
+  font-family: var(--main-font);
+  text-transform: uppercase;
+  color: var(--bg-color);
+  position: absolute;
+  top: 0;
+  right: 31px;
+  line-height: 25px;
+  display: none;
+}
+
+.theme-light .header__check::after {
+  content: '';
+  display: none;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: var(--bg-color);
+  box-shadow: 0px 0px 4px 2px var(--bg-color);
+  position: absolute;
+  top: 9px;
+  right: 9px;
+}
+
+.theme-light .header__theme-menu-button:hover {
+  border: 1px solid var(--accent-color);
 }
