--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,740 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-image: var(--background-image);
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  display: grid;
+  gap: 30px;
+}
+
+.content-section {
+  padding: 10px;
+}
+
+header {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+  justify-items: end;
+}
+
+.decorated-zone {
+  position: relative;
+  min-height: 668px;
+  height: 100vh;
+}
+
+.decorated-zone::after, .decorated-zone::before {
+  content: '';
+  height: 25px;
+  width: 25px;
+  position: absolute;
+}
+
+.decorated-zone::before {
+  bottom: 10px;
+  left: 10px;
+  border-bottom: 1px solid var(--bg-color);
+  border-left: 1px solid var(--bg-color);
+}
+
+.decorated-zone::after {
+  top: 10px;
+  right: 10px;
+  border-top: 1px solid var(--bg-color);
+  border-right: 1px solid var(--bg-color);
+}
+
+.header__title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  color: var(--h1-color);
+  text-shadow: 4px 4px 0 var(--bg-color);
+  line-height: 0.825;
+  font-family: var(--main-font);
+}
+
+.header__subtitle {
+  line-height: 1.3;
+  min-height: max-content;
+  font-size: var(--main-size);
+  font-weight: var(--bold);
+}
+
+.header__check {
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.header__check::before {
+  content: 'rec';
+  font-family: var(--main-font);
+  text-transform: uppercase;
+  color: var(--bg-color);
+  position: absolute;
+  top: 0;
+  right: 31px;
+  line-height: 25px;
+}
+
+.header__check::after {
+  content: '';
+  display: block;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: var(--bg-color);
+  box-shadow: 0px 0px 4px 2px var(--bg-color);
+  position: absolute;
+  top: 9px;
+  right: 9px;
+}
+
+.header__theme-menu {
+  font-family: var(--main-font);
+  color: var(--bg-color);
+  font-size: var(--main-size);
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  display: block;
+  text-transform: lowercase;
+  background-color: transparent;
+  border: none;
+  padding-inline: 13px;
+  padding-block: 0 3px;
+  cursor: pointer;
+}
+.header__theme-menu-button_active {
+  pointer-events: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;    
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid var(--bg-color);
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--bg-color);
+}
+
+.content {
+  display: grid;
+  gap: 50px;
+}
+
+.section {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.section__title {
+  color: var(--bg-color);
+  font-size: var(--main-size);
+  font-weight: var(--bold);
+  line-height: 130%;
+}
+
+.section-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.card {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+}
+
+.card__title {
+  font-size: var(--main-size);
+  font-weight: var(--bold);
+  line-height: 130%;
+}
+
+.card__link {
+  text-shadow: 2px 2px 0 var(--bg-color);
+}
+
+.card__link:hover {
+  text-decoration: underline;
+}
+
+.card__link:focus-visible {
+  outline: none;    
+  border: 1px solid var(--bg-color);
+}
+
+.gallery__section {
+  grid-template-columns: 1fr;
+  gap: 10px;
+}
+
+.gallery__image {
+  inline-size: 100%;
+}
+
+.gallery__section .section-list {
+  gap: 5px;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.footer span {
+  align-self: center;
+  justify-self: center;
+  text-shadow: 2px 2px 0px var(--bg-color);
+  color: var(--h1-color);
+  font-family: var(--main-font);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: var(--bold);
+  line-height: 82,5%;
+}  
+
+@media (376px < width <= 768px ) {
+  .page {
+    /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+    background-image: var(--background-image);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    display: grid;
+    gap: 40px;
+  }
+  
+  .content-section {
+    padding: 20px;
+  }
+
+  .header {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr min-content 1fr;
+    padding-inline-start: 0;
+  }
+
+  .decorated-zone {
+    position: relative;
+    min-height: 1024px;
+    height: 100vh;
+  }
+
+  .decorated-zone::after, .decorated-zone::before {
+    content: '';
+    height: 25px;
+    width: 25px;
+    position: absolute;
+  }
+  
+  .decorated-zone::before {
+    bottom: 20px;
+    left: 20px;
+    border-bottom: 1px solid var(--bg-color);
+    border-left: 1px solid var(--bg-color);
+  }
+  
+  .decorated-zone::after {
+    top: 20px;
+    right: 20px;
+    border-top: 1px solid var(--bg-color);
+    border-right: 1px solid var(--bg-color);
+  }
+  
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    color: var(--h1-color);
+    text-shadow: 4px 4px 0 var(--bg-color);
+    line-height: 0.825;
+    font-family: var(--main-font);
+    justify-self: start;
+  }
+  
+  .header__subtitle {
+    line-height: 1.3;
+    min-height: max-content;
+    font-size: var(--main-size);
+    font-weight: var(--bold);
+    justify-self: end;
+    max-width: 364px;
+    width: 100vw;
+  }
+  
+  .header__check {
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  
+  .header__check::before {
+    content: 'rec';
+    font-family: var(--main-font);
+    text-transform: uppercase;
+    color: var(--bg-color);
+    position: absolute;
+    top: 0;
+    right: 41px;
+    line-height: 25px;
+  }
+  
+  .header__check::after {
+    content: '';
+    display: block;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    background-color: var(--bg-color);
+    box-shadow: 0px 0px 4px 2px var(--bg-color);
+    position: absolute;
+    top: 9px;
+    right: 19px;
+  }
+  
+  .header__theme-menu {
+    font-family: var(--main-font);
+    color: var(--bg-color);
+    font-size: var(--main-size);
+  }
+  
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .header__theme-menu-button {
+    display: block;
+    text-transform: lowercase;
+    background-color: transparent;
+    border: none;
+    padding-inline: 13px;
+    padding-block: 0 3px;
+    cursor: pointer;
+  }
+  
+  .header__theme-menu-button:focus-visible {
+    outline: none;    
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid var(--bg-color);
+  }
+  
+  .header__theme-menu-button:hover {
+    border: 1px solid var(--bg-color);
+  }
+
+  .content {
+    display: grid;
+    gap: 80px;
+  }
+  
+  .section__focus {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 20px;
+  }
+
+  .section__focus .section-list {
+    max-width: 472px;
+    width: max-content;
+  }
+
+  .section__concentration .section__title {
+    max-width: 236px;
+  }
+
+  .section__advice {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 20px;
+  }
+
+  .section__advice .section-list {
+    grid-column-start: 2;
+    grid-column-end: auto;
+    max-width: 472px;
+    width: max-content;
+  }
+
+  .section__title {
+    color: var(--bg-color);
+    font-size: var(--main-size);
+    font-weight: var(--bold);
+    line-height: 130%;
+  }
+  
+  .section-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  
+  .card {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+  
+  .card__title {
+    font-size: var(--main-size);
+    font-weight: var(--bold);
+    line-height: 130%;
+  }
+  
+  .card__link {
+    text-shadow: 2px 2px 0 var(--bg-color);
+  }
+  
+  .card__link:hover {
+    text-decoration: underline;
+  }
+  
+  .card__link:focus-visible {
+    outline: none;    
+    border: 1px solid var(--bg-color);
+  }
+  
+  .gallery__section {
+    gap: 20px;
+  }
+
+  .gallery__section .section-list {
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+    gap: 20px;
+  }
+
+  .gallery__section .section-list-item:first-child {
+    grid-column: span 2;
+    max-height: 192px;
+  }
+
+  .gallery__section .section-list-item:nth-child(2) {
+    grid-row: span 2;
+  }
+
+  .gallery__section .section-list-item:nth-child(3) {
+    grid-row: span 2;
+  }
+
+  .gallery__section .section-list-item:nth-child(4) {
+    max-height: 230px;
+  }
+
+  .gallery__section .section-list-item:last-child {
+    grid-column: span 2;
+    max-height: 318px;
+  }
+  
+  .gallery__image {
+    inline-size: 100%;
+    block-size: 100%;
+    object-fit: cover;
+  }
+
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  
+  .footer span {
+    align-self: center;
+    justify-self: center;
+    text-shadow: 2px 2px 0px var(--bg-color);
+    color: var(--h1-color);
+    font-family: var(--main-font);
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    font-weight: var(--bold);
+    line-height: 82,5%;
+  }  
+}
+
+@media (768px < width <= 1024px ) {
+  .page {
+    /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+    background-image: var(--background-image);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    display: grid;
+    gap: 40px;
+  }
+  
+  .content-section {
+    padding: 20px;
+  }
+
+  .header {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr min-content 1fr;
+    padding-inline-start: 0;
+  }
+
+  .decorated-zone {
+    position: relative;
+    min-height: 768px;
+    height: 100vh;
+  }
+
+  .decorated-zone::after, .decorated-zone::before {
+    content: '';
+    height: 25px;
+    width: 25px;
+    position: absolute;
+  }
+  
+  .decorated-zone::before {
+    bottom: 20px;
+    left: 20px;
+    border-bottom: 1px solid var(--bg-color);
+    border-left: 1px solid var(--bg-color);
+  }
+  
+  .decorated-zone::after {
+    top: 20px;
+    right: 20px;
+    border-top: 1px solid var(--bg-color);
+    border-right: 1px solid var(--bg-color);
+  }
+  
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    color: var(--h1-color);
+    text-shadow: 4px 4px 0 var(--bg-color);
+    line-height: 0.825;
+    font-family: var(--main-font);
+    justify-self: start;
+  }
+  
+  .header__subtitle {
+    line-height: 1.3;
+    min-height: max-content;
+    font-size: var(--main-size);
+    font-weight: var(--bold);
+    justify-self: end;
+    width: max-content;
+    max-width: 491px;
+  }
+  
+  .header__check {
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  
+  .header__check::before {
+    content: 'rec';
+    font-family: var(--main-font);
+    text-transform: uppercase;
+    color: var(--bg-color);
+    position: absolute;
+    top: 0;
+    right: 41px;
+    line-height: 25px;
+  }
+  
+  .header__check::after {
+    content: '';
+    display: block;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    background-color: var(--bg-color);
+    box-shadow: 0px 0px 4px 2px var(--bg-color);
+    position: absolute;
+    top: 9px;
+    right: 19px;
+  }
+  
+  .header__theme-menu {
+    font-family: var(--main-font);
+    color: var(--bg-color);
+    font-size: var(--main-size);
+    justify-self: center;
+    align-self: start;
+    margin-inline-start: 20px;
+  }
+  
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+  }
+  
+  .header__theme-menu-button {
+    display: block;
+    text-transform: lowercase;
+    background-color: transparent;
+    border: none;
+    padding-inline: 13px;
+    padding-block: 0 3px;
+    cursor: pointer;
+  }
+  
+  .header__theme-menu-button:focus-visible {
+    outline: none;    
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid var(--bg-color);
+  }
+  
+  .header__theme-menu-button:hover {
+    border: 1px solid var(--bg-color);
+  }
+  
+  .content {
+    display: grid;
+    gap: 80px;
+  }
+  
+  .section__focus {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 20px;
+  }
+
+  .section__focus .section-list {
+    max-width: 648.92px;
+    width: max-content;
+  }
+
+  .section__concentration .section__title {
+    max-width: 315px;
+  }
+
+  .section__concentration .section-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .section__advice {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 20px;
+  }
+
+  .section__advice .section-list {
+    grid-column-start: 2;
+    grid-column-end: auto;
+    max-width: 649px;
+    width: max-content;
+  }
+
+  .section__title {
+    color: var(--bg-color);
+    font-size: var(--main-size);
+    font-weight: var(--bold);
+    line-height: 130%;
+  }
+  
+  .section-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  
+  .card {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+  
+  .card__title {
+    font-size: var(--main-size);
+    font-weight: var(--bold);
+    line-height: 130%;
+  }
+  
+  .card__link {
+    text-shadow: 2px 2px 0 var(--bg-color);
+  }
+  
+  .card__link:hover {
+    text-decoration: underline;
+  }
+  
+  .card__link:focus-visible {
+    outline: none;    
+    border: 1px solid var(--bg-color);
+  }
+  
+  .gallery__section {
+    gap: 20px;
+  }
+
+  .gallery__section .section-list {
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+    gap: 20px;
+  }
+
+  .gallery__section .section-list-item:first-child {
+    grid-column: span 2;
+    max-height: 260px;
+  }
+
+  .gallery__section .section-list-item:nth-child(2) {
+    grid-row: span 2;
+  }
+
+  .gallery__section .section-list-item:nth-child(3) {
+    grid-row: span 2;
+  }
+
+  .gallery__section .section-list-item:nth-child(4) {
+    max-height: 315px;
+  }
+
+  .gallery__section .section-list-item:last-child {
+    grid-column: span 2;
+    max-height: 433px;
+  }
+  
+  .gallery__image {
+    inline-size: 100%;
+    block-size: 100%;
+    object-fit: cover;
+  }
+
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  
+  .footer span {
+    align-self: center;
+    justify-self: center;
+    text-shadow: 2px 2px 0px var(--bg-color);
+    color: var(--h1-color);
+    font-family: var(--main-font);
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    font-weight: var(--bold);
+    line-height: 82,5%;
+  }  
 }
