--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,16 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --background-image: url(../images/cover-image-dark.png);
+  --main-font: 'IBM Plex mono', monospace, sans-serif;
+  --bg-color: #FF0070;
+  --text-color: #F1B2CE;
+  --accent-color: #000028;
+  --h1-color: #DB00FF;
+  --main-size: 18px;
+  --bold: 700;
+  --normal: 400;
+}
+
