--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,13 +5,12 @@
 
 :root {
   --background-image: url(../images/cover-image-dark.png);
-  --main-font: 'IBM Plex mono', monospace, sans-serif;
-  --bg-color: #FF0070;
-  --text-color: #F1B2CE;
+  --main-font: "IBM Plex mono", monospace, sans-serif;
+  --bg-color: #ff0070;
+  --text-color: #f1b2ce;
   --accent-color: #000028;
-  --h1-color: #DB00FF;
+  --h1-color: #db00ff;
   --main-size: 18px;
   --bold: 700;
   --normal: 400;
 }
-
