--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,21 +9,17 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-    --background-image: url(../images/cover-image-dark.png);
-    --main-font: 'IBM Plex mono', monospace, sans-serif;
-    --bg-color: #FF0070;
-    --text-color: #F1B2CE;
-    --accent-color: #000028;
-    --h1-color: #DB00FF;
-    --main-size: 18px;
-    --bold: 700;
-    --normal: 400;
+  --background-image: url(../images/cover-image-dark.png);
+  --main-font: "IBM Plex mono", monospace, sans-serif;
+  --bg-color: #ff0070;
+  --text-color: #f1b2ce;
+  --accent-color: #000028;
+  --h1-color: #db00ff;
+  --main-size: 18px;
+  --bold: 700;
+  --normal: 400;
 }
-
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
 }
-
-
-
