--- a/styles/style.css
+++ b/styles/style.css
@@ -28,8 +28,9 @@ header {
   height: 100vh;
 }
 
-.decorated-zone::after, .decorated-zone::before {
-  content: '';
+.decorated-zone::after,
+.decorated-zone::before {
+  content: "";
   height: 25px;
   width: 25px;
   position: absolute;
@@ -73,7 +74,7 @@ header {
 }
 
 .header__check::before {
-  content: 'rec';
+  content: "rec";
   font-family: var(--main-font);
   text-transform: uppercase;
   color: var(--bg-color);
@@ -84,7 +85,7 @@ header {
 }
 
 .header__check::after {
-  content: '';
+  content: "";
   display: block;
   width: 9px;
   height: 9px;
@@ -119,10 +120,11 @@ header {
 }
 .header__theme-menu-button_active {
   pointer-events: none;
+  border: 1px solid var(--bg-color);
 }
 
 .header__theme-menu-button:focus-visible {
-  outline: none;    
+  outline: none;
   border-top: 0;
   border-left: 0;
   border-right: 0;
@@ -130,7 +132,7 @@ header {
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid var(--bg-color);
+  border: 1px solid rgba(255, 0, 112, 0.4);
 }
 
 .content {
@@ -178,7 +180,7 @@ header {
 }
 
 .card__link:focus-visible {
-  outline: none;    
+  outline: none;
   border: 1px solid var(--bg-color);
 }
 
@@ -208,10 +210,10 @@ header {
   font-family: var(--main-font);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-weight: var(--bold);
-  line-height: 82,5%;
-}  
+  line-height: 82, 5%;
+}
 
-@media (376px < width <= 768px ) {
+@media (376px < width <= 768px) {
   .page {
     /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
     background-image: var(--background-image);
@@ -221,7 +223,7 @@ header {
     display: grid;
     gap: 40px;
   }
-  
+
   .content-section {
     padding: 20px;
   }
@@ -239,27 +241,28 @@ header {
     height: 100vh;
   }
 
-  .decorated-zone::after, .decorated-zone::before {
-    content: '';
+  .decorated-zone::after,
+  .decorated-zone::before {
+    content: "";
     height: 25px;
     width: 25px;
     position: absolute;
   }
-  
+
   .decorated-zone::before {
     bottom: 20px;
     left: 20px;
     border-bottom: 1px solid var(--bg-color);
     border-left: 1px solid var(--bg-color);
   }
-  
+
   .decorated-zone::after {
     top: 20px;
     right: 20px;
     border-top: 1px solid var(--bg-color);
     border-right: 1px solid var(--bg-color);
   }
-  
+
   .header__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     color: var(--h1-color);
@@ -268,7 +271,7 @@ header {
     font-family: var(--main-font);
     justify-self: start;
   }
-  
+
   .header__subtitle {
     line-height: 1.3;
     min-height: max-content;
@@ -278,7 +281,7 @@ header {
     max-width: 364px;
     width: 100vw;
   }
-  
+
   .header__check {
     position: absolute;
     top: 0px;
@@ -286,9 +289,9 @@ header {
     grid-row-start: 1;
     grid-row-end: 2;
   }
-  
+
   .header__check::before {
-    content: 'rec';
+    content: "rec";
     font-family: var(--main-font);
     text-transform: uppercase;
     color: var(--bg-color);
@@ -297,9 +300,9 @@ header {
     right: 41px;
     line-height: 25px;
   }
-  
+
   .header__check::after {
-    content: '';
+    content: "";
     display: block;
     width: 9px;
     height: 9px;
@@ -310,19 +313,19 @@ header {
     top: 9px;
     right: 19px;
   }
-  
+
   .header__theme-menu {
     font-family: var(--main-font);
     color: var(--bg-color);
     font-size: var(--main-size);
   }
-  
+
   .header__theme-menu-list {
     display: flex;
     flex-direction: column;
     gap: 10px;
   }
-  
+
   .header__theme-menu-button {
     display: block;
     text-transform: lowercase;
@@ -332,15 +335,15 @@ header {
     padding-block: 0 3px;
     cursor: pointer;
   }
-  
+
   .header__theme-menu-button:focus-visible {
-    outline: none;    
+    outline: none;
     border-top: 0;
     border-left: 0;
     border-right: 0;
     border-bottom: 1px solid var(--bg-color);
   }
-  
+
   .header__theme-menu-button:hover {
     border: 1px solid var(--bg-color);
   }
@@ -349,7 +352,7 @@ header {
     display: grid;
     gap: 80px;
   }
-  
+
   .section__focus {
     display: grid;
     grid-template-columns: repeat(2, auto);
@@ -384,38 +387,38 @@ header {
     font-weight: var(--bold);
     line-height: 130%;
   }
-  
+
   .section-list {
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
   }
-  
+
   .card {
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
   }
-  
+
   .card__title {
     font-size: var(--main-size);
     font-weight: var(--bold);
     line-height: 130%;
   }
-  
+
   .card__link {
     text-shadow: 2px 2px 0 var(--bg-color);
   }
-  
+
   .card__link:hover {
     text-decoration: underline;
   }
-  
+
   .card__link:focus-visible {
-    outline: none;    
+    outline: none;
     border: 1px solid var(--bg-color);
   }
-  
+
   .gallery__section {
     gap: 20px;
   }
@@ -447,7 +450,7 @@ header {
     grid-column: span 2;
     max-height: 318px;
   }
-  
+
   .gallery__image {
     inline-size: 100%;
     block-size: 100%;
@@ -458,7 +461,7 @@ header {
     display: grid;
     grid-template-columns: 1fr;
   }
-  
+
   .footer span {
     align-self: center;
     justify-self: center;
@@ -467,11 +470,11 @@ header {
     font-family: var(--main-font);
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     font-weight: var(--bold);
-    line-height: 82,5%;
-  }  
+    line-height: 82, 5%;
+  }
 }
 
-@media (768px < width <= 1024px ) {
+@media (768px < width <= 1024px) {
   .page {
     /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
     background-image: var(--background-image);
@@ -481,7 +484,7 @@ header {
     display: grid;
     gap: 40px;
   }
-  
+
   .content-section {
     padding: 20px;
   }
@@ -499,27 +502,28 @@ header {
     height: 100vh;
   }
 
-  .decorated-zone::after, .decorated-zone::before {
-    content: '';
+  .decorated-zone::after,
+  .decorated-zone::before {
+    content: "";
     height: 25px;
     width: 25px;
     position: absolute;
   }
-  
+
   .decorated-zone::before {
     bottom: 20px;
     left: 20px;
     border-bottom: 1px solid var(--bg-color);
     border-left: 1px solid var(--bg-color);
   }
-  
+
   .decorated-zone::after {
     top: 20px;
     right: 20px;
     border-top: 1px solid var(--bg-color);
     border-right: 1px solid var(--bg-color);
   }
-  
+
   .header__title {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     color: var(--h1-color);
@@ -528,7 +532,7 @@ header {
     font-family: var(--main-font);
     justify-self: start;
   }
-  
+
   .header__subtitle {
     line-height: 1.3;
     min-height: max-content;
@@ -538,7 +542,7 @@ header {
     width: max-content;
     max-width: 491px;
   }
-  
+
   .header__check {
     position: absolute;
     top: 0px;
@@ -546,9 +550,9 @@ header {
     grid-row-start: 1;
     grid-row-end: 2;
   }
-  
+
   .header__check::before {
-    content: 'rec';
+    content: "rec";
     font-family: var(--main-font);
     text-transform: uppercase;
     color: var(--bg-color);
@@ -557,9 +561,9 @@ header {
     right: 41px;
     line-height: 25px;
   }
-  
+
   .header__check::after {
-    content: '';
+    content: "";
     display: block;
     width: 9px;
     height: 9px;
@@ -570,7 +574,7 @@ header {
     top: 9px;
     right: 19px;
   }
-  
+
   .header__theme-menu {
     font-family: var(--main-font);
     color: var(--bg-color);
@@ -579,13 +583,13 @@ header {
     align-self: start;
     margin-inline-start: 20px;
   }
-  
+
   .header__theme-menu-list {
     display: flex;
     flex-direction: row;
     gap: 10px;
   }
-  
+
   .header__theme-menu-button {
     display: block;
     text-transform: lowercase;
@@ -595,24 +599,24 @@ header {
     padding-block: 0 3px;
     cursor: pointer;
   }
-  
+
   .header__theme-menu-button:focus-visible {
-    outline: none;    
+    outline: none;
     border-top: 0;
     border-left: 0;
     border-right: 0;
     border-bottom: 1px solid var(--bg-color);
   }
-  
+
   .header__theme-menu-button:hover {
     border: 1px solid var(--bg-color);
   }
-  
+
   .content {
     display: grid;
     gap: 80px;
   }
-  
+
   .section__focus {
     display: grid;
     grid-template-columns: repeat(2, auto);
@@ -647,44 +651,49 @@ header {
     width: max-content;
   }
 
+  .section__advice .section-list-item {
+    display: grid;
+    gap: 20px;
+  }
+
   .section__title {
     color: var(--bg-color);
     font-size: var(--main-size);
     font-weight: var(--bold);
     line-height: 130%;
   }
-  
+
   .section-list {
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
   }
-  
+
   .card {
     display: grid;
     grid-template-columns: 1fr;
     gap: 10px;
   }
-  
+
   .card__title {
     font-size: var(--main-size);
     font-weight: var(--bold);
     line-height: 130%;
   }
-  
+
   .card__link {
     text-shadow: 2px 2px 0 var(--bg-color);
   }
-  
+
   .card__link:hover {
     text-decoration: underline;
   }
-  
+
   .card__link:focus-visible {
-    outline: none;    
+    outline: none;
     border: 1px solid var(--bg-color);
   }
-  
+
   .gallery__section {
     gap: 20px;
   }
@@ -716,7 +725,7 @@ header {
     grid-column: span 2;
     max-height: 433px;
   }
-  
+
   .gallery__image {
     inline-size: 100%;
     block-size: 100%;
@@ -727,7 +736,7 @@ header {
     display: grid;
     grid-template-columns: 1fr;
   }
-  
+
   .footer span {
     align-self: center;
     justify-self: center;
@@ -736,6 +745,6 @@ header {
     font-family: var(--main-font);
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     font-weight: var(--bold);
-    line-height: 82,5%;
-  }  
+    line-height: 82, 5%;
+  }
 }
