--- a/styles/dark.css
+++ b/styles/dark.css
@@ -19,3 +19,33 @@
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
 }
+
+.theme-dark .header__theme-menu-button_active {
+  border: 1px solid var(--bg-color);
+}
+
+.theme-dark .section__title {
+  color: var(--bg-color);
+}
+
+.theme-dark .header__theme-menu {
+  color: var(--bg-color);
+}
+
+.theme-dark .decorated-zone::before {
+  border-bottom: 1px solid var(--bg-color);
+  border-left: 1px solid var(--bg-color);
+}
+
+.theme-dark .decorated-zone::after {
+  border-top: 1px solid var(--bg-color);
+  border-right: 1px solid var(--bg-color);
+}
+
+.theme-dark .header__check::before {
+  display: block;
+}
+
+.theme-dark .header__check::after {
+  display: block;
+}
