--- a/styles/light.css
+++ b/styles/light.css
@@ -33,34 +33,8 @@
     background-color: var(--current-color);
   }
 
-  .decorated-zone::before {
-    border-bottom: 1px solid var(--accent-color);
-    border-left: 1px solid var(--accent-color);
-  }
-
-  .decorated-zone::after {
-    border-top: 1px solid var(--accent-color);
-    border-right: 1px solid var(--accent-color);
-  }
-
-  .header__theme-menu-button_active {
-    border: 1px solid var(--accent-color);
-  }
-
-  .header__theme-menu-button:hover {
-    border: 1px solid rgba(50, 49, 45, 0.4);
-  }
-
-  .header__theme-menu {
-    color: var(--accent-color);
-  }
-
   .section__title {
     color: var(--accent-color);
-  }
-
-  .card__text {
-    color: var(--text-color);
   }
 
   .header__check::before {
@@ -69,6 +43,20 @@
 
   .header__check::after {
     display: none;
+  }
+
+  .header__theme-menu {
+    color: var(--accent-color);
+  }
+
+  .decorated-zone::before {
+    border-bottom: 1px solid var(--accent-color);
+    border-left: 1px solid var(--accent-color);
+  }
+
+  .decorated-zone::after {
+    border-top: 1px solid var(--accent-color);
+    border-right: 1px solid var(--accent-color);
   }
 }
 
@@ -91,15 +79,15 @@
   border: 1px solid rgba(53, 52, 48, 0.4);
 }
 
+.theme-light .header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+}
+
 .theme-light .header__theme-menu {
   color: var(--accent-color);
 }
 
 .theme-light .section__title {
-  color: var(--accent-color);
-}
-
-.theme-light .card__text {
   color: var(--accent-color);
 }
 
