--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,43 +9,12 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --background-image: url(../images/cover-image-dark.png);
+  --background-image: url("../images/cover-image-dark.png");
+  --bg-main-color: #000028;
   --bg-color: #ff0070;
+  --title-color: #000028;
   --text-color: #f1b2ce;
-  --accent-color: #000028;
   --h1-color: #db00ff;
-}
-
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
-}
-
-.theme-dark .header__theme-menu-button_active {
-  border: 1px solid var(--bg-color);
-}
-
-.theme-dark .section__title {
-  color: var(--bg-color);
-}
-
-.theme-dark .header__theme-menu {
-  color: var(--bg-color);
-}
-
-.theme-dark .decorated-zone::before {
-  border-bottom: 1px solid var(--bg-color);
-  border-left: 1px solid var(--bg-color);
-}
-
-.theme-dark .decorated-zone::after {
-  border-top: 1px solid var(--bg-color);
-  border-right: 1px solid var(--bg-color);
-}
-
-.theme-dark .header__check::before {
-  display: block;
-}
-
-.theme-dark .header__check::after {
-  display: block;
+  --accent-color: #ff0070;
+  --link-shadow-color: #ff0070;
 }
