--- a/styles/light.css
+++ b/styles/light.css
@@ -9,32 +9,29 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --background-image: url(./images/cover-image-light.png);
+  --background-image: url("../images/cover-image-light.png");
+  --bg-main-color: #fff1f7;
   --bg-color: #ff8dcb;
+  --title-color: #353430;
   --text-color: #353430;
-  --accent-color: #353430;
   --h1-color: #ffc2e6;
-  --current-color: #fff1f7;
+  --h1-shadow: #ff0070;
+  --accent-color: #353430;
+  --link-shadow-color: #ff8dcb;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
     /* Дублируем переменные светлой темы */
-    --background-image: url(./images/cover-image-light.png);
+    --background-image: url("../images/cover-image-light.png");
+    --bg-main-color: #fff1f7;
     --bg-color: #ff8dcb;
+    --title-color: #353430;
     --text-color: #353430;
-    --accent-color: #353430;
     --h1-color: #ffc2e6;
-    --current-color: #fff1f7;
-  }
-
-  .page {
-    /* Вам также нужно будет написать ряд подобных селекторов */
-    background-color: var(--current-color);
-  }
-
-  .section__title {
-    color: var(--accent-color);
+    --accent-color: #353430;
+    --link-shadow-color: #ff8dcb;
+    --menu-hover-color: rgba(53, 52, 48, 0.4);
   }
 
   .header__check::before {
@@ -44,51 +41,6 @@
   .header__check::after {
     display: none;
   }
-
-  .header__theme-menu {
-    color: var(--accent-color);
-  }
-
-  .decorated-zone::before {
-    border-bottom: 1px solid var(--accent-color);
-    border-left: 1px solid var(--accent-color);
-  }
-
-  .decorated-zone::after {
-    border-top: 1px solid var(--accent-color);
-    border-right: 1px solid var(--accent-color);
-  }
-}
-
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
-  background-color: var(--current-color);
-}
-
-.theme-light .decorated-zone::before {
-  border-bottom: 1px solid var(--accent-color);
-  border-left: 1px solid var(--accent-color);
-}
-
-.theme-light .decorated-zone::after {
-  border-top: 1px solid var(--accent-color);
-  border-right: 1px solid var(--accent-color);
-}
-
-.theme-light .header__theme-menu-button:hover {
-  border: 1px solid rgba(53, 52, 48, 0.4);
-}
-
-.theme-light .header__theme-menu-button_active {
-  border: 1px solid var(--accent-color);
-}
-
-.theme-light .header__theme-menu {
-  color: var(--accent-color);
-}
-
-.theme-light .section__title {
-  color: var(--accent-color);
 }
 
 .theme-light .header__check::before {
