--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   background-image: var(--background-image);
-  background-color: var(--accent-color);
+  background-color: var(--bg-main-color);
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
@@ -41,15 +41,15 @@ header {
 .decorated-zone::before {
   bottom: 10px;
   left: 10px;
-  border-bottom: 1px solid var(--bg-color);
-  border-left: 1px solid var(--bg-color);
+  border-bottom: 1px solid var(--accent-color);
+  border-left: 1px solid var(--accent-color);
 }
 
 .decorated-zone::after {
   top: 10px;
   right: 10px;
-  border-top: 1px solid var(--bg-color);
-  border-right: 1px solid var(--bg-color);
+  border-top: 1px solid var(--accent-color);
+  border-right: 1px solid var(--accent-color);
 }
 
 .header__title {
@@ -64,7 +64,7 @@ header {
   line-height: 1.3;
   min-height: max-content;
   font-size: var(--main-size);
-  color: var(--accent-color);
+  color: var(--title-color);
 }
 
 .header__check {
@@ -83,7 +83,7 @@ header {
   content: "rec";
   font-family: var(--main-font);
   text-transform: uppercase;
-  color: var(--bg-color);
+  color: var(--accent-color);
   position: absolute;
   line-height: 25px;
   right: 9px;
@@ -95,14 +95,14 @@ header {
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  background-color: var(--bg-color);
-  box-shadow: 0px 0px 4px 2px var(--bg-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 0px 4px 2px var(--accent-color);
   position: absolute;
 }
 
 .header__theme-menu {
   font-family: var(--main-font);
-  color: var(--bg-color);
+  color: var(--accent-color);
   font-size: var(--main-size);
 }
 
@@ -124,27 +124,19 @@ header {
 
 .header__theme-menu-button_active {
   pointer-events: none;
-  border: 1px solid var(--bg-color);
-}
-
-.header__theme-menu-button:focus {
-  outline: none;
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 1px solid var(--bg-color);
+  border: 1px solid var(--accent-color);
 }
 
 .header__theme-menu-button:focus-visible {
-  outline: none;
   border-top: 0;
   border-left: 0;
   border-right: 0;
-  border-bottom: 1px solid var(--bg-color);
+  border-bottom: 1px solid var(--accent-color);
+  outline: none;
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid rgba(255, 0, 112, 0.4);
+  border: 1px solid var(--menu-hover-color);
 }
 
 .content {
@@ -164,7 +156,7 @@ header {
 }
 
 .section__title {
-  color: var(--bg-color);
+  color: var(--accent-color);
   font-size: var(--main-size);
   font-weight: var(--bold);
   line-height: 130%;
@@ -186,7 +178,7 @@ header {
   font-size: var(--main-size);
   font-weight: var(--bold);
   line-height: 130%;
-  color: var(--accent-color);
+  color: var(--title-color);
 }
 
 h4.card__title {
@@ -198,7 +190,7 @@ h4.card__title {
 }
 
 .card__link {
-  text-shadow: 2px 2px 0 var(--bg-color);
+  text-shadow: 2px 2px 0 var(--link-shadow-color);
   text-decoration: none;
 }
 
@@ -207,7 +199,8 @@ h4.card__title {
 }
 
 .card__link:focus {
-  border: 1px solid var(--bg-color);
+  border: 1px solid var(--text-color);
+  outline: none;
 }
 
 .gallery__section {
@@ -231,12 +224,12 @@ h4.card__title {
 .footer span {
   align-self: center;
   justify-self: center;
-  text-shadow: 2px 2px 0px var(--bg-color);
+  text-shadow: 2px 2px 0px var(--h1-shadow);
   color: var(--h1-color);
   font-family: var(--main-font);
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-weight: var(--bold);
-  line-height: 82, 5%;
+  line-height: 0.825;
 }
 
 @media (min-width: 768px) {
