--- a/styles/dark.css
+++ b/styles/dark.css
@@ -17,4 +17,13 @@
   --h1-color: #db00ff;
   --accent-color: #ff0070;
   --link-shadow-color: #ff0070;
+  --menu-hover-color: rgba(255, 0, 112, 0.4);
+}
+
+.theme-dark .header__check::before {
+  display: inline;
+}
+
+.theme-dark .header__check::after {
+  display: block;
 }
